--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,1 @@
----
-title: Welcome to Middleman
----
-
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<meta http-equiv="refresh" content="0; url=/home" />
