--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,19 +1,50 @@
-<!doctype html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <meta charset="utf-8">
-    
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
-    
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <title>calc</title>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+    <%= stylesheet_link_tag 'xy.css' %>
+    <%= stylesheet_link_tag 'jquery.fancybox/jquery.fancybox.css' %>
+    <%= javascript_include_tag 'jquery.fancybox-1.2.1.pack' %>
+    <%= javascript_include_tag 'calcaxy.js' %>
   </head>
-  
-  <body class="<%= page_classes %>">
-    <%= yield %>
+  <body>
+    <div id="file_preview">&nbsp;</div>
+    <div id="container">
+      <table id="header"><tr>
+          <td><%= link_to ' ', '/', :id => 'logo'  %></td>
+          <td><div id="calc_name"><%= @calc %></div></td>
+          <td><a id="mail" href="mailto:calcies@calcaxy.com"></a></td>
+        </tr>
+      </table>
+
+      <div id="tabs">
+        <%= link_to 'HOME', '/home', :class => active_if_current('/home/') %>
+        <div class="space">&nbsp;</div>
+        <%= link_to 'BOOC', '/booc', :class => '' %>
+        <div class="space">&nbsp;</div>
+        <%= link_to 'FILES', '/works', :class => '' %>
+        <div class="space">&nbsp;</div>
+        <%= link_to 'PIXCELL', '/images/pix_cell.png', :popup => true %>
+        <div class="space">&nbsp;</div>
+        <%= link_to 'BIOBIBLIO', '/biobiblio', :class => '' %>
+        <div class="space">&nbsp;</div>
+        <%= link_to 'TXT\'S', '/txts', :class => '' %>
+        <div class="space">&nbsp;</div>
+
+        <div class="tab">&nbsp;</div>
+        <div class="space">&nbsp;</div>
+
+      </div>
+      <img id="modern_browsers" src="/images/worksinall.png" alt="ie sucks" />
+      <a id="calclab" href="http://calclab.com"><img  alt="looking for calclab?" src="/images/calcaxy_calclab.gif" /></a>
+      <div id="page">
+        <%= yield %>
+      </div>
+    </div>
+    <%= partial 'layouts/ga' %>
+    <%= partial 'layouts/cmaps' %>
   </body>
 </html>
