--- a/source/home/index.html.erb
+++ b/source/home/index.html.erb
@@ -2,8 +2,7 @@
 
 <div class="home_image">
   <% image = calc_view.home.attachment('home') %>
-  <%= image.public_filename %>
-  <% link_to(image_tag(image.public_filename), '/homeology') if image.present? %>
+  <%= link_to(image_tag(image.public_filename), '/homeology') if image.present? %>
 </div>
 
 <div id="calc_form">
