--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -23,15 +23,15 @@
       <div id="tabs">
         <%= link_to 'HOME', '/home', :class => active_if_current('/home') %>
         <div class="space">&nbsp;</div>
-        <%= link_to 'BOOC', '/booc', :class => active_if_current('/booc') %>
+        <%= link_to 'BOOC', '/booc/2008', :class => active_if_current('/booc') %>
         <div class="space">&nbsp;</div>
         <%= link_to 'FILES', '/works', :class => active_if_current('/works') %>
         <div class="space">&nbsp;</div>
         <%= link_to 'PIXCELL', '/images/pix_cell.png', :popup => true %>
         <div class="space">&nbsp;</div>
-        <%= link_to 'BIOBIBLIO', '/biobiblio', :class => '' %>
+        <%= link_to 'BIOBIBLIO', '/biobiblio/217', :class => active_if_current('/biobiblio') %>
         <div class="space">&nbsp;</div>
-        <%= link_to 'TXT\'S', '/txts', :class => '' %>
+        <%= link_to 'TXT\'S', '/txts', :class => active_if_current('/txts') %>
         <div class="space">&nbsp;</div>
 
         <div class="tab">&nbsp;</div>
