Remove insecure connections

--- a/source/layouts/_cmaps.html.erb
+++ b/source/layouts/_cmaps.html.erb
@@ -1,1 +1,1 @@
-<img src="http://www2.clustrmaps.com/counter/index2.php?url=http://www.calcaxy.com" style="border:0px;display:none" id="clustrMapsImg" />
+<img src="https://www2.clustrmaps.com/counter/index2.php?url=https://www.calcaxy.com" style="border:0px;display:none" id="clustrMapsImg" />
