--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <title>calc</title>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
     <%= stylesheet_link_tag 'xy.css' %>
     <%= stylesheet_link_tag 'jquery.fancybox/jquery.fancybox.css' %>
     <%= javascript_include_tag 'jquery.fancybox-1.2.1.pack' %>
@@ -39,7 +39,7 @@
 
       </div>
       <img id="modern_browsers" src="/images/worksinall.png" alt="ie sucks" />
-      <a id="calclab" href="http://calclab.com"><img  alt="looking for calclab?" src="/images/calcaxy_calclab.gif" /></a>
+      <a id="calclab" href="https://calclab.com"><img  alt="looking for calclab?" src="/images/calcaxy_calclab.gif" /></a>
       <div id="page">
         <%= yield %>
       </div>
